<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="news_ithome">Ithome</string>
    <string name="news_qdaily">Qdaily</string>
    <string name="news_aifanr">Aifanr</string>
    <string name="news_tmts">TMTPost</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="main_name">Simple Read</string>
    <string name="app_name">Simple Read</string>
    <string name="nav_interaction">Communicate</string>
</resources>
