<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ithome"
            android:icon="@drawable/ithome2"
            android:title="@string/news_ithome" />
        <item
            android:id="@+id/nav_qdaily"
            android:icon="@drawable/qdaily2"
            android:title="@string/news_qdaily" />
        <item
            android:id="@+id/nav_aifanr"
            android:icon="@drawable/ifanr"
            android:title="@string/news_aifanr" />
    </group>

    <item android:title="@string/nav_interaction">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
